# grocerylist

./: .gitignore  README.markdown  config.hs  grocerylist.cabal  plans.org
src/: Config.hs  Main.hs
src/GroceryList/: Account.hs  Datatypes.hs  Forms.hs  Home.hs  Item.hs  List.hs  Lists.hs  Login.hs  Signup.hs  SiteMap.hs  Tags.hs  Templates.hs  Util.hs
static/: default.appcache
static/css/: style.css  uniform.aristo.css
templates/: account.tpl  button.tpl  center-button.tpl  default.tpl  home.tpl  item.tpl  items.tpl  list-item.tpl  list.tpl  login.tpl  master.tpl  offline.tpl  signup.tpl  tag-bar.tpl
